--- a/arch/arm64/configs/onclite-perf_defconfig
+++ b/arch/arm64/configs/onclite-perf_defconfig
@@ -2888,6 +2888,7 @@ CONFIG_FB_MSM=y
 # CONFIG_FB_SIMPLE is not set
 # CONFIG_MSM_DBA is not set
 CONFIG_FB_MSM_MDSS_COMMON=y
+CONFIG_MDSS_PLL_14NM=y
 # CONFIG_FB_MSM_MDP is not set
 CONFIG_FB_MSM_MDSS=y
 # CONFIG_FB_MSM_MDP_NONE is not set
