--- a/arch/arm64/configs/onclite-perf_defconfig
+++ b/arch/arm64/configs/onclite-perf_defconfig
@@ -143,7 +143,7 @@ CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_SCHEDTUNE=y
 # CONFIG_MEMCG is not set
-# CONFIG_BLK_CGROUP is not set
+CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
